--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,10 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%);
 }
 
+.clip-diagonal-left{
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
+}
+
 /* Cursor Effect code */
 
 .cursor-ring {
