--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,22 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
 }
 
+.side-scroll::-webkit-scrollbar-track{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+.side-scroll::-webkit-scrollbar
+{
+	width: 5px;
+	background-color: #F5F5F5;
+}
+
+.side-scroll::-webkit-scrollbar-thumb
+{
+	background-color: #FFB31A;
+}
+
 /* Cursor Effect code */
 
 
